--- a/portfolio.html
+++ b/portfolio.html
@@ -79,23 +79,30 @@
             <li class="list-item">
               <a class="link" href="">
                 <img src="./images/clients/bank.jpg" alt="bankapp" />
-                <h2 class="suptitle">Banking App Interface Concept</h2>
-                <p class="text">App</p></a
-              >
+                <div class="projects-name">
+                  <h2 class="suptitle">Banking App Interface Concept</h2>
+                  <p class="text">App</p>
+                </div>
+              </a>
             </li>
             <li class="list-item">
               <a class="link" href="">
                 <img src="./images/clients/cashlesspayment.jpg" alt="phone" />
-                <h2 class="suptitle">Cashless Payment</h2>
-                <p class="text">Marketing</p></a
-              >
+
+                <div class="projects-name">
+                  <h2 class="suptitle">Cashless Payment</h2>
+                  <p class="text">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="list-item">
               <a class="link" href="">
                 <img src="./images/clients/meditationapp.jpg" alt="laptop" />
-                <h2 class="suptitle">Meditation App</h2>
-                <p class="text">App</p></a
-              >
+                <div class="projects-name">
+                  <h2 class="suptitle">Meditation App</h2>
+                  <p class="text">App</p>
+                </div>
+              </a>
             </li>
             <li class="list-item">
               <a class="link" href="">
@@ -103,9 +110,12 @@
                   src="./images/clients/taxiservise.jpg"
                   alt="driver in car"
                 />
-                <h2 class="suptitle">Taxi Service</h2>
-                <p class="text">Marketing</p></a
-              >
+                <div class="projects-name">
+                  v
+                  <h2 class="suptitle">Taxi Service</h2>
+                  <p class="text">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="list-item">
               <a class="link" href="">
@@ -113,9 +123,11 @@
                   src="./images/clients/screenillustration.jpg"
                   alt="smartphone"
                 />
-                <h2 class="suptitle">Screen Illustrations</h2>
-                <p class="text">Design</p></a
-              >
+                <div class="projects-name">
+                  <h2 class="suptitle">Screen Illustrations</h2>
+                  <p class="text">Design</p>
+                </div>
+              </a>
             </li>
             <li class="list-item">
               <a class="link" href=""
@@ -123,23 +135,29 @@
                   src="./images/clients/onlinecourses.jpg"
                   alt="girl with phone"
                 />
-                <h2 class="suptitle">Online Courses</h2>
-                <p class="text">Marketing</p></a
-              >
+                <div class="projects-name">
+                  <h2 class="suptitle">Online Courses</h2>
+                  <p class="text">Marketing</p>
+                </div>
+              </a>
             </li>
 
             <li class="list-item">
               <a class="link" href="">
                 <img src="./images/clients/instastories.jpg" alt="instagram" />
-                <h2 class="suptitle">Instagram Stories Concept</h2>
-                <p class="text">Design</p></a
-              >
+                <div class="projects-name">
+                  <h2 class="suptitle">Instagram Stories Concept</h2>
+                  <p class="text">Design</p>
+                </div>
+              </a>
             </li>
             <li class="list-item">
               <a class="link" href="">
                 <img src="./images/clients/organicfood.jpg" alt="fruits" />
-                <h2 class="suptitle">Organic Food</h2>
-                <p class="text">Web Site</p>
+                <div class="projects-name">
+                  <h2 class="suptitle">Organic Food</h2>
+                  <p class="text">Web Site</p>
+                </div>
               </a>
             </li>
             <li class="list-item">
@@ -148,9 +166,11 @@
                   src="./images/clients/freschcoffe.jpg"
                   alt="coffe with milk"
                 />
-                <h2 class="suptitle">Fresh Coffee</h2>
-                <p class="text">Web Site</p></a
-              >
+                <div class="projects-name">
+                  <h2 class="suptitle">Fresh Coffee</h2>
+                  <p class="text">Web Site</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
