--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
     <!-- шапка -->
     <header class="header">
       <div class="container header-nav">
-        <nav class="navigation">
+       
           <a class="link-logo link" href="./index.html"
             >Web<span class="logo-text">Studio</span></a
           >
+           <nav class="navigation"></nav>
           <ul class="menu list">
             <li class="menu-item">
               <a class="menu-link link" href="./index.html">Studio</a>
@@ -58,37 +59,39 @@
       <!-- секція 1 -->
 
       <section class="hero">
-        <h1 class="caption">Effective Solutions for Your Business</h1>
-        <button class="order-button" type="button">Order Service</button>
+        <div class="container hero-content">
+          <h1 class="caption">Effective Solutions for Your Business</h1>
+          <button class="order-button" type="button">Order Service</button>
+        </div>
       </section>
 
       <!-- секція 2 -->
-      <section>
+      <section class="feature">
         <div class="container">
           <h2 hidden class="subtitle">якості компанії</h2>
-          <ul class="feature list">
-            <li class="feature-list">
+          <ul class="feature-list list">
+            <li class="feature-item">
               <h3 class="suptitle">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="feature-list">
+            <li class="feature-item">
               <h3 class="suptitle">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="feature-list">
+            <li class="feature-item">
               <h3 class="suptitle">Diligence</h3>
               <p class="text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="feature-list">
+            <li class="feature-item">
               <h3 class="suptitle">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
@@ -100,11 +103,11 @@
       </section>
 
       <!-- секція 3 -->
-      <section>
+      <section class="options">
         <div class="container">
-          <h2 class="feature-title">What are we doing</h2>
-          <ul class="list list-img">
-            <li>
+          <h2 class="option-title">What are we doing</h2>
+          <ul class="list option-list">
+            <li class="option-item">
               <img src="./images/section3/pc.jpg" alt="notebook" width="360" />
             </li>
             <li>
@@ -125,9 +128,9 @@
         </div>
       </section>
       <!-- ceкція 4 -->
-      <section class="team">
+      <section class="section-team">
         <div class="container">
-          <h2 class="feature-title">Our Team</h2>
+          <h2 class="option-title">Our Team</h2>
           <ul class="list team-list">
             <li class="team-item">
               <img src="./images/team/mark.jpg" alt="man" width="264" />
