--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
     <!-- шапка -->
     <header class="header">
       <div class="container header-nav">
-       
+        <nav class="navigation">
           <a class="link-logo link" href="./index.html"
             >Web<span class="logo-text">Studio</span></a
           >
-           <nav class="navigation"></nav>
           <ul class="menu list">
             <li class="menu-item">
               <a class="menu-link link" href="./index.html">Studio</a>
@@ -58,8 +57,8 @@
     <main>
       <!-- секція 1 -->
 
-      <section class="hero">
-        <div class="container hero-content">
+      <section class="section-hero">
+        <div class="container">
           <h1 class="caption">Effective Solutions for Your Business</h1>
           <button class="order-button" type="button">Order Service</button>
         </div>
@@ -110,14 +109,14 @@
             <li class="option-item">
               <img src="./images/section3/pc.jpg" alt="notebook" width="360" />
             </li>
-            <li>
+            <li option-item>
               <img
                 src="./images/section3/phone.jpg"
                 alt="mobileApp"
                 width="360"
               />
             </li>
-            <li>
+            <li option-item>
               <img
                 src="./images/section3/smartphone.jpg"
                 alt="hand"
