--- a/portfolio.html
+++ b/portfolio.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <!-- header -->
+
     <header class="header">
       <div class="container header-nav">
         <nav class="navigation">
@@ -28,7 +30,7 @@
             <li class="menu-item">
               <a class="menu-link link" href="./index.html">Studio</a>
             </li>
-            <li class="menu-itemv">
+            <li class="menu-item">
               <a class="menu-link link" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="menu-item">
