--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </section>
 
       <!-- секція 2 -->
-      <section class="feature">
+      <section class="section-feature">
         <div class="container">
           <h2 hidden class="subtitle">якості компанії</h2>
           <ul class="feature-list list">
@@ -102,21 +102,21 @@
       </section>
 
       <!-- секція 3 -->
-      <section class="options">
+      <section class="section-options">
         <div class="container">
           <h2 class="option-title">What are we doing</h2>
           <ul class="list option-list">
             <li class="option-item">
               <img src="./images/section3/pc.jpg" alt="notebook" width="360" />
             </li>
-            <li option-item>
+            <li class="option-item">
               <img
                 src="./images/section3/phone.jpg"
                 alt="mobileApp"
                 width="360"
               />
             </li>
-            <li option-item>
+            <li class="option-item">
               <img
                 src="./images/section3/smartphone.jpg"
                 alt="hand"
